--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     (function(){
       const signature = "© Nikki Bhai | Do Not Copy";
-      const domain = "nikhilkumar3236.github.io";
+      const domain = "nikkton.github.io";
       const trap = () => { while(true) { console.log("🔥 Caught Copycat"); alert("Invalid Domain ❌"); } };
 
       // Trap 1: Domain Check
